--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-commerce",
-"homepage": "https://youssef-865.github.io/e-commerce-shop-show",
+"homepage": "https://youssef-865.github.io/shop-show",
   "private": true,
   "version": "0.0.0",
   "type": "module",
